// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoteButtonElement must match the snapshot with default Props 1`] = `
<ButtonStyle
  aria-busy={false}
  aria-label="foo"
  as="VoteButtonStyle"
  color="red"
>
  <ButtonIconWrapperStyle>
    SvgThumbsup
  </ButtonIconWrapperStyle>
</ButtonStyle>
`;

exports[`VoteButtonElement must return the diff between snapshot when proposal is qualified or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,9 +1,9 @@
  <ButtonStyle
    aria-busy={false}
    aria-label="foo"
-   as="IsVotedButtonStyle"
+   as="VoteButtonStyle"
    color="red"
  >
    <ButtonIconWrapperStyle>
      SvgThumbsup
    </ButtonIconWrapperStyle>
`;
